--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
     <div class="container">
         <div class="info">
             <h2>Contact Information</h2>
-            <p>📧 Telegram Channel: <span id="telegram"><a href="https://t.me/realtechrt">Telegram channel</a></span></p>
-            <p>🟢 WhatsApp Channel: <span id="whatsapp"><a href="https://whatsapp.com/channel/0029Vb96gJXCHDye6YCpHy2d">Join</a></span></p>
+            <p>📧 Telegram Channel: <span id="telegram"><a href="https://t.me/Reward_community">Telegram channel</a></span></p>
+            <p>🟢 WhatsApp Channel: <span id="whatsapp"><a href="https://whatsapp.com/channel/0029VbATe7VL2AU5Qq1O0w2x">Join</a></span></p>
             <p>⏳ Response Time: <span id="response-time">[24 Hours]</span></p>
         </div>
         <div class="categories">
@@ -81,3 +81,4 @@
 </body>
 
 </html
+
